--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ell-style",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://muhammadirfan854.github.io/Ell-Style",
+  "homepage": "https://muhammadirfan854.github.io/Ell-Style/",
   "dependencies": {
     "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
@@ -18,13 +18,13 @@
     "gh-pages": "^6.3.0"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
